[project]
name = ""
version = ""
description = ""
authors = [
    {name = "me", email = ""},
]
dependencies = [
    "flask>=2.1.3",
    "psycopg2-binary>=2.9.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.0",
    "autopep8>=1.6.0",
]
